--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic,700,700italic");
-@import url("https://fonts.googleapis.com/css?family=Space+Mono");
 @import url('https://fonts.googleapis.com/css?family=Megrim');
 
 /*
@@ -1844,7 +1843,7 @@
 	}
 
 	p, ul, ol, dl, table, blockquote, form {
-		font-family: 'Space Mono';
+		font-family: Arial, Helvetica, sans-serif;
 		font-weight: bold;
 		margin: 0 0 2em 0;
 	}
