--- a/assets/css/belt-main.css
+++ b/assets/css/belt-main.css
@@ -3052,7 +3052,7 @@
 
 			#header {
 				background-attachment: scroll,							scroll,							scroll;
-				background-image: url("images/top-1600.svg"), url("images/overlay.png"), url("../../images/belt.jpg");
+				background-image: url("images/top-1600.svg"), url("images/overlay.png"), url("../../images/BELT.jpg");
 				background-size: 1600px 230px,					auto,							cover;
 				padding: 6em 0 12em 0;
 			}
@@ -3214,7 +3214,7 @@
 		/* Header */
 
 			#header {
-				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/belt.jpg");
+				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/BELT.jpg");
 				background-size: 1280px 184px,						auto,							cover;
 				padding: 3em 0 7em 0;
 			}
